<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bitehunter.bitehunter.Views.RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription=""
        android:padding="10dp"
        app:srcCompat="@drawable/bitehunter_name"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittextshape"
        android:elevation="1dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/inputPassworda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittextshape"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/inputRepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittextshape"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittextshape"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/inputContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittextshape"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:maxLength="12"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/buttonshape"
        android:onClick="btnCreateAccountClicked"
        android:text="@string/create_new_account"
        android:textColor="@color/colorButtonFont"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAlreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</LinearLayout>
