<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bitehunter.bitehunter.Views.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:srcCompat="@drawable/bitehunter_name"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:ems="10"
        android:hint="Please enter your Email"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:ems="10"
        android:hint="Please enter your Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:onClick="btnLoginClicked"
        android:text="@string/login"
        android:textColor="@color/colorButtonFont"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgOR"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/or"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtCreateNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_new_account"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
